--- a/index.html
+++ b/index.html
@@ -203,10 +203,9 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>기대 해 주세요!</h3>
+					<p>앞으로도 더 좋은 서버 환경과, 더 좋은 서비스를 위해 노력 하겠습니다!</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
 				</footer>
 
