--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>점프맵</h3>
-							<p>마인크레프트 GABANG 서버는 점프맵으로 유저 분들이 재밌게 놀수 있게 준비를 했습니다!</p>
+							<h3>야생</h3>
+							<p>마인크레프트 GABANG 서버는 야생을 준비 했습니다! <br /> 총 5개 맵으로 각각 다르게 세팅을 해 뒀습니다!</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3></h3>
-							<p></p>
+							<h3>미니 게임</h3>
+							<p>마인크레프트 GABANG 서버는 서버 내에서 미니 게임이 가능 하도록 열심히 준비 해 봤습니다!</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>SNS</h3>
 							<p>저희가 공식 카페나, 공식 디스코드 서버가 없어도 <br />총 관리자 채널, 공식 페이스북을 운영 하고 있습니다! <br />서버 관련으로 소식을 듣고 싶으시다면? 유튜브 채널, 공지를 보고 싶으시다면? 페이스북을 봐 주세요!</p>
